# itmo-is-phys-modelling

./: .gitignore  Cargo.toml  README.md  config.json  flake.nix  go.mod  go.sum  newtons_rings_config.json  pendulums_config.json
cmd/main/: main.go
cmd/newtons-rings/: main.go
cmd/pendulums/: main.go
internal/calculation/: calculation.go  pendulums.go  rings.go
internal/config/: config.go  pendulums.go  rings.go
internal/plotting/: pendulums.go  pendulums_plotting.go  plotting.go  rings.go
src/: main.rs
